--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ def entry(ev):
 <br>
 <br>
 <button onClick="window.location.reload();">Try a new word</button>
-
+<br>
+<br>
+Made for Annie with love <3
 </body>
 
 </html>
