--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     
     <style>
 input {
-font-size:2rem;
+font-size:4rem;
 }
 .center {
-font-size:3.5rem;
+font-size:5rem;
 text-align: center;
 }
 .banner {
-font-size:3rem;
+font-size:5rem;
 background-color: #434E55;
 color: #FFFFFF;
 padding-left:20px;
@@ -27,9 +27,9 @@ padding-bottom:10px;
 }
 body {
 background-image: url("https://ih1.redbubble.net/image.3800106616.8942/bg,f8f8f8-flat,750x,075,f-pad,750x1000,f8f8f8.u1.jpg");
-background-size:500px;
+background-size:700px;
 background-repeat:no-repeat;
-background-position: center top;
+background-position: center;
 background-color: rgba(255,255,255,0.97);
 background-blend-mode: lighten;
 }
@@ -47,9 +47,9 @@ background-blend-mode: lighten;
     <input id="input1">
         <p id="result_head"></p>
     <p id="result"></p>
-    <button id="button1" style="font-size:2rem">Generate</button>
-    <button onClick="window.location.reload();" style="font-size:2rem">Clear</button>
-    <p style="font-size:1rem">Made for Annie with love <3</p>
+    <button id="button1" style="font-size:4rem">Generate</button>
+    <button onClick="window.location.reload();" style="font-size:4rem">Clear</button>
+    <p style="font-size:2rem">Made for Annie with love <3</p>
 </div>
   
 <script type="text/python">
