Update index.html to include word wrap

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 
-    
 <head>
     <meta charset="utf-8">
     <script type="text/javascript"
@@ -13,6 +12,8 @@
     <style>
 input {
 font-size:4rem;
+width:90%;
+text-align:center;
 }
 .center {
 font-size:5rem;
@@ -34,6 +35,9 @@ background-position: center;
 background-color: rgba(255,255,255,0.97);
 background-blend-mode: lighten;
 }
+p {
+word-wrap:break-word;
+} 
 </style>
 
 </head>
